<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.HealthActivity">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/tv_1"
            android:textSize="32sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:background="@color/black_overlay"

            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:clipToPadding="false"
            android:gravity="center"
            android:layout_margin="1dp"
            android:orientation="vertical"
            android:layout_marginBottom="8dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="245dp"
                android:weightSum="10"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="vertical">


                <android.support.v7.widget.CardView
                    android:id="@+id/women_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="5"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="226dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <ImageView
                            android:layout_width="186dp"
                            android:layout_height="236dp"
                            android:src="@drawable/pious" />
                    <LinearLayout
                        android:layout_width="190dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/btn_5"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:layout_weight="2"
                            android:gravity="center"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:layout_margin="5dp"
                            android:background="@color/colorAccen" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:gravity="center_horizontal"
                            android:layout_margin="5dp"
                            android:text="@string/click_1"
                            android:textColor="@color/colorAccent"
                            android:textSize="15sp"
                            android:textStyle="italic" />
                        </LinearLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:clipToPadding="false"
                android:layout_weight="5"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/child_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="5"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <ImageView
                            android:layout_width="169dp"
                            android:layout_height="wrap_content"
                            android:padding="25dp"
                            android:gravity="center"
                            android:src="@drawable/baby" />
                        <LinearLayout
                            android:layout_width="190dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:weightSum="10">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/btn_6"
                                android:textSize="25sp"
                                android:textStyle="bold"
                                android:layout_weight="2"
                                android:gravity="center"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="3dp"
                                android:layout_margin="5dp"
                                android:background="@color/colorAccen" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.5"
                                android:gravity="center_horizontal"
                                android:layout_margin="5dp"
                                android:text="@string/click_2"
                                android:textColor="@color/colorAccent"
                                android:textSize="15sp"
                                android:textStyle="italic" />
                        </LinearLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>
                </LinearLayout>



    </LinearLayout>

</LinearLayout>