<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.example.basha.healthapa.Activity.MainActivity">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:background="@drawable/medicalapps">

        <!--<ViewFlipper
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/viewflipper"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/medical"/>


        </ViewFlipper>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:clipToPadding="false"
        android:gravity="center"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/health_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="2.1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:weightSum="10">

                    <!--<ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="7.5"
                        android:padding="5dp"
                        android:src="@drawable/health" />-->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/btn_1"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="5dp"
                        android:background="@color/colorAccen" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/disease"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/hospital_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="3.8"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:weightSum="10">

                    <!--<ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="7.5"
                        android:padding="5dp"
                        android:src="@drawable/doctors" />-->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/btn_2"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="5dp"
                        android:background="@color/colorAccen" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/hos"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">


            <android.support.v7.widget.CardView
                android:id="@+id/doctor_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="3.5"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:weightSum="10">

                    <!--<ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="7.5"
                        android:padding="5dp"
                        android:src="@drawable/doctors" />-->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/btn_3"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="5dp"
                        android:background="@color/colorAccen" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/doc"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/emmergency_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="3.5"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:weightSum="10">

                    <!--<ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="7.5"
                        android:padding="5dp"
                        android:src="@drawable/doctors" />-->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/btn_4"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="5dp"
                        android:background="@color/colorAccen" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/emmer"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="2"
                android:layout_marginBottom="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/splash1"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="0dp"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>

    <!--<include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@drawable/medicare"
        android:layout_weight="6">
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:alpha="0.9"
        android:layout_weight="3.9">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="4"
            android:layout_margin="5dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_1"
                android:id="@+id/oneBt"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:onClick="oneBt"
                android:background="@drawable/buttonbg"
                android:layout_weight="2"
                android:layout_margin="8dp"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/twoBt"
                android:text="@string/btn_2"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:onClick="twoBt"
                android:background="@drawable/buttonbg"
                android:layout_weight="2"
                android:layout_margin="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="4"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="8dp"
            >

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/threeBt"
                android:text="@string/btn_3"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:background="@drawable/buttonbg"
                android:onClick="threeBt"
                android:layout_weight="2"
                android:layout_margin="8dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/btn_4"
                android:id="@+id/fourBt"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:background="@drawable/buttonbg"
                android:onClick="fourBt"
                android:layout_weight="2"
                android:layout_margin="8dp"/>
        </LinearLayout>


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:layout_margin="0dp"
        android:background="@color/colorPrimarydeep">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="italic"
            android:text="@string/splash"
            android:textAlignment="center"/>
    </LinearLayout>-->
</LinearLayout>
